RESOLVED FIXED101259
[BlackBerry] screenX/Y gives wrong values
https://bugs.webkit.org/show_bug.cgi?id=101259
Summary [BlackBerry] screenX/Y gives wrong values
Rob Buis
Reported 2012-11-05 14:19:48 PST
SSIA
Attachments
Patch (3.31 KB, patch)
2012-11-05 14:23 PST, Rob Buis
yong.li.webkit: review+
Rob Buis
Comment 1 2012-11-05 14:23:32 PST
Rob Buis
Comment 2 2012-11-05 14:47:07 PST
Note You need to log in before you can comment on or make changes to this bug.