[BlackBerry] screenX/Y gives wrong values https://bugs.webkit.org/show_bug.cgi?id=101259

Reviewed by Yong Li.

PR 237071

Reviewed internally by Gen Mak.

Do not transform screenPos coordinates.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::mouseEvent):
(BlackBerry::WebKit::WebPage::touchEvent):
(BlackBerry::WebKit::WebPage::touchPointAsMouseEvent):

Canonical link: https://commits.webkit.org/119346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133528 268f45cc-cd09-0410-ab3c-d52691b4dbfc